--- a/_config/config.yml
+++ b/_config/config.yml
@@ -2,6 +2,6 @@
 name: hasoneautocompletefield
 ---
 
-NathanCox\HasOneAutocompleteField\Forms\HasOneAutocompleteField:
+primoz2500\HasOneAutocompleteField\Forms\HasOneAutocompleteField:
   clearButtonEnabled: false
   autocompleteDelay: 300
